--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:22.1.2'
     //libreria de base de datos de firebase
     implementation 'com.google.firebase:firebase-database:20.2.2'
+    implementation "com.firebaseui:firebase-ui-database:8.0.0"
 
     //cardview dependencia
     implementation 'androidx.cardview:cardview:1.0.0'
